--- a/SMS_Web/Views/PettyCashAccount/Index.cshtml
+++ b/SMS_Web/Views/PettyCashAccount/Index.cshtml
@@ -145,7 +145,7 @@
                                     <td>
                                         @Html.ActionLink("Edit", "Index", new { id = item.Id }, new { style = "color: blue;" }) 
                                         @*@Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { onclick = "return ConfirmDelete('Are you sure you wish to delete this Account?', " + item.Id + ", 'FinanceFifthLvl');", style = "color: blue;" })
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { onclick = "return ConfirmDelete('Are you sure you wish to delete this Account?', " + item.Id + ", 'PettyCashAccount');", style = "color: blue;" })
                                     </td>
                                 </tr>
                             }
@@ -222,7 +222,7 @@
                         '</td>' +
                         '<td style="color:blue;">' +
                             '@Html.ActionLink("   ", "Index", new { id = item.Id }, new { style = "color: green;font-size: 15px;", title = "Edit", @class = "glyphicon glyphicon-edit" }) ' +
-                            '@Html.ActionLink("   ", "Delete", new { id = item.Id }, new { onclick = "return ConfirmDelete('Are you sure you wish to delete this Account?', " + item.Id + ", 'FinanceFifthLvl');", style = "color: darkred;font-size: 15px;", title = "Delete", @class = "glyphicon glyphicon-trash" })' +
+                            '@Html.ActionLink("   ", "Delete", new { id = item.Id }, new { onclick = "return ConfirmDelete('Are you sure you wish to delete this Account?', " + item.Id + ", 'PettyCashAccount');", style = "color: darkred;font-size: 15px;", title = "Delete", @class = "glyphicon glyphicon-trash" })' +
                         '</td>' +
                     '</tr>';
         $("#classTable").find('tbody').append(tableRow);
