--- a/SMS_Web/Views/Shared/_Layout.cshtml
+++ b/SMS_Web/Views/Shared/_Layout.cshtml
@@ -287,7 +287,10 @@
                                 <ul class="dropdown-menu dropdown-usermenu">
                                     <li><a href="~/User/ChangePassword"> <i class="fa fa-shield pull-right"></i> Change Password</a></li>
                                     <li><a href="~/Login?sessionId=-59"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                                    @if (SMS_Web.Controllers.SecurityAssurance.UserPermissionController.GetSessionModel(Session.SessionID).USER_NAME.ToLower().Contains("waseem"))
+                                    {
                                     <li><input type="submit" value="Reset Server Logs" onclick="ConfirmAction('Are you sure, you want to reset logs on server?', 'resetLogs')" id="resetLogs" name="Create" class="btn btn-danger" style="width:100%" /></li>
+                                    }
                                 </ul>
                             </li>
                         </ul>
